# neurons-as-autoencoders

./: .gitignore  pyproject.toml
configs/: mlp.yaml
notebooks/: ann_experiments.ipynb  mlp_experiments.ipynb  mlp_hill_climb_20_runs_avgloss.csv  mlp_hill_climb_20_runs_avgloss_n=1000_k=5.csv
src/datasets/: NK.py
src/experiments/: ann_experiments.py  cnn_experiments.py  deep_nan_cnn_experiment.py  mlp_experiments.py  nan_cnn_experiment.py  nan_experiments.py  parallel_nan_cnn_experiments.py
src/models/: ANN.py  NAN.py  cnn_model.py  cnn_model_no_pooling.py  deep_nan_cnn.py  local_gd_nan.py  mlp.py  nan_cnn.py  no_pool_simple_weight_share_nan_cnn.py  parallel_nan_cnn.py  refactor_local_gd_nan.py  simple_weight_share_nan_cnn.py  weight_share_nan_cnn.py
src/optimizers/: MLP_hillclimb.py  ann_hillclimb.py  global_backprop.py  hillclimb.py  mlp_backprop.py  nan_cnn_local_gd.py  nan_gradient_descent.py  nan_hill_climb.py  nan_hillclimb.py
src/utils/: config.py  main.py
